# keyatlas

./: .gitignore  README.md  ghostty.md  ghostty.typ  main.py  pyproject.toml
.github/workflows/: pages.yml  release.yml
data/: ghostty.yaml  macos-essentials.yaml  macos-screenshots.yaml  macos-text-editing.yaml  macos-window-management.yaml  vscode-editing.yaml  vscode-general.yaml  vscode-navigation.yaml
docs/plans/: 2026-02-17-feature-batch-design.md  2026-02-17-feature-batch-implementation.md  2026-02-17-typst-py-migration-design.md  2026-02-20-web-app-design.md  2026-02-20-web-app-implementation.md
schema/: keyatlas.schema.json
src/keyatlas/: cli.py
template/: cheatsheet.typ
web/: .cta.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: routeTree.gen.ts  styles.css
web/src/components/: AppCard.tsx  AppGrid.tsx  AppSidebar.tsx  CheatsheetView.tsx  EntryRow.tsx  KeyCombo.tsx  Toolbar.tsx
web/src/context/: HiddenEntriesContext.tsx
web/src/data/: cheatsheets.ts  types.ts
web/src/routes/: $appSlug.tsx  __root.tsx  index.tsx
