[project]
name = "keyatlas"
version = "0.1.0"
description = "Keyboard shortcut cheat sheets rendered as printable PDFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyyaml>=6.0", "typst"]

[project.scripts]
keyatlas = "keyatlas.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keyatlas"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
